--- a/build.gradle
+++ b/build.gradle
@@ -15,11 +15,11 @@ repositories {
 dependencies {
 	compileOnly 'org.projectlombok:lombok:1.18.22'
 	annotationProcessor 'org.projectlombok:lombok:1.18.22'
-	implementation group: 'org.springframework', name: 'spring-context', version: '5.3.16'
-	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
+	implementation 'org.springframework:spring-context:5.3.16'
+	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
 	testImplementation 'org.mockito:mockito-core:4.3.1'
 	testImplementation 'org.mockito:mockito-junit-jupiter:4.3.1'
-	testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
+	testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
 }
 
 test {
